front-end/deploy-front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
  labels:
    app: notepad
    type: front-end
spec:
  replicas: 2   
  selector:
    matchLabels:
      app: notepad
      type: front-end
  template:
    metadata:
      name: front-end
      labels:
        app: notepad
        type: front-end
    spec:
      containers:
      - name:  notepad
        image: 94215545/spring-notepad:spring-notepad-img
        ports:
        - containerPort: 8080
          name: front-end-port
