front-end/svc-cip-notepad.yaml
apiVersion: v1
kind: Service
metadata:
  name: notepad-svc-cip
  labels:
    app: notepad
    type: front-end
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    app: notepad
    type: front-end
