front-end/svc-notepad-health.yaml
apiVersion: v1
kind: Service
metadata:
  name: notepad-svc-health
  labels:
    app: notepad
    type: front-end
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30008
  selector:
    app: notepad
    type: front-end
