front-end/svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: notepad-svc
  labels:
    app: notepad
    type: front-end
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 8080
      nodePort: 30008
  selector:
    app: notepad
    type: front-end
