front-end/ingress-health-notes.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-health-notes
  labels:
    app: notepad
    type: front-end
spec:
  rules:
  - http:
      paths:
      - path: /health
        backend:
          serviceName: health-service
          servicePort: 8080
      - path: /notes
        backend:
          serviceName: notes-service
          servicePort: 8080
